--- a/src/listview/nggrid.html
+++ b/src/listview/nggrid.html
@@ -1,6 +1,7 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html ng-app="ngGridDemoApp">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <script data-main="js/nggrid.demo" src="js/lib/requirejs/require.js"></script>
     <script src="js/config.js"></script>
     <link rel="stylesheet" type="text/css" href="js/lib/ng-grid/ng-grid.css"></link>
@@ -12,9 +13,7 @@
     }
     </style>
 </head>
-<body>
-    <div ng-view>
-    </div>
+<body ng-view>
 </body>
 </html>
 
