Add prototype of listview in approval form

--- a/src/listview/ngtable.html
+++ b/src/listview/ngtable.html
@@ -4,10 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <script data-main="js/ngtable.demo" src="js/lib/requirejs/require.js"></script>
     <script src="js/config.js"></script>
+    <link rel="stylesheet" type="text/css" href="js/lib/bootstrap/bootstrap.css"></link>
     <style>
         table {
             border: 1px solid #d4d4d4;
-            margin: 0;
+            margin: 0 auto;
             border-collapse: collapse;
             border-spacing: 0;
         }
