--- a/src/listview/datatables.html
+++ b/src/listview/datatables.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="ngGridDemoApp">
+<html ng-app="ngDataTablesDemoApp">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <script data-main="js/nggrid.demo" src="js/lib/requirejs/require.js"></script>
+    <script data-main="js/datatables.demo" src="js/lib/requirejs/require.js"></script>
     <script src="js/config.js"></script>
     <link rel="stylesheet" type="text/css" href="js/lib/bootstrap/bootstrap.css"></link>
     <style>
-    .gridStyle {
-        border: 1px solid rgb(212,212,212);
-        width: 400px;
-        height: 300px;
-        margin: 0px auto;
-    }
     </style>
 </head>
 <body ng-view>
