--- a/src/listview/nggrid.html
+++ b/src/listview/nggrid.html
@@ -4,13 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <script data-main="js/nggrid.demo" src="js/lib/requirejs/require.js"></script>
     <script src="js/config.js"></script>
-    <link rel="stylesheet" type="text/css" href="js/lib/bootstrap/bootstrap.css"></link>
+    <link rel="stylesheet" type="text/css" href="js/lib/ng-grid/ng-grid.css"></link>
     <style>
     .gridStyle {
         border: 1px solid rgb(212,212,212);
         width: 400px;
-        height: 300px;
-        margin: 0px auto;
+        height: 300px
     }
     </style>
 </head>
